# ratbox-svn

./: .cvsignore  .indent.pro  ASSUMPTIONS  BUGS  CREDITS  CVS-Access  ChangeLog  DBMOVE  Hybrid-team  INSTALL  INSTALL.mysql  INSTALL.sqlite  LICENSE  Makefile.am  Makefile.in  README  README.FIRST  README.PLATFORMS  README.VMS  README.epoll  README.small_nets  RELEASE_NOTES  RELNOTES  SVN-Access  TODO  UPGRADING  acinclude.m4  aclocal.m4  configure  configure.ac  configure.in  make.com  opers.txt
adns/: .cvsignore  .depend  Makefile.am  Makefile.in  adns.h  check.c  descrip.mms  dlist.h  event.c  general.c  internal.h  parse.c  query.c  reply.c  resolver.c  setup.c  transmit.c  tvarith.h  types.c
autoconf/: acconfig.h  configure.in  install-sh
contrib/: .depend  Makefile.in  README  README.HASH  README.LMH  build_one  cidr_bans.diff  example_module.c  links_notice.c  lmh.diff  m_42.c  m_clearchan.c  m_flags.c  m_force.c  m_hash.c  m_jupe.c  m_ltrace.c  m_mkpasswd.c  m_ojoin.c  m_okick.c  m_olist.c  m_omode.c  m_opme.c  m_owho.c  m_owhois.c  m_tburst.c  remote-unkline.diff  spy_admin_notice.c  spy_info_notice.c  spy_links_notice.c  spy_motd_notice.c  spy_stats_notice.c  spy_stats_p_notice.c  spy_trace_notice.c  spy_whois_notice.c  spy_whois_notice_global.c  stats_notice.c  temp-dline.diff  vms_lex_yy.c  vms_version.c  (+3 more)
doc/: 005.txt  CIDR.txt  ChangeLog.old  LazyLinks.as.implemented.txt  LazyLinks.txt  Makefile.in  challenge.txt  chanfix.txt  convertconf-example.conf  database_mod.txt  dbhook.txt  dbhook_current.txt  example.conf  example.conf.efnet  example.efnet.conf  example_old.conf  generate-schema.pl  hooks.txt  index.txt  ircd.8  ircd.motd  kline.txt  kserver-dt.txt  kserver.txt  messages.txt  modeg.txt  modes.txt  monitor.txt  msghash.txt  operguide.txt  opers.txt  resv.txt  rsdb.txt  schema-sqlite.txt  schema.txt  server-version-info  serverhide.txt  services.txt  simple.conf  tgchange.txt  (+5 more)
doc/ChangeLog/: ChangeLog-1.2
doc/base/: schema-mysql.txt  schema-pgsql.txt
doc/technical/: Persistent_Clients.txt  README.openssl  cookies.txt  cryptlink.txt  event.txt  iauth.txt  index.txt  message-customisation.txt  network.txt  send.txt  ts6.txt  whats-new-code.txt
help/: Makefile.in  genindex.sh
help/alis/: index  list
help/banserv/: general
help/chanserv/: addban  adduser  cdrop  chanlist  chansuspend  chanunsuspend  clearallops  clearbans  clearmodes  clearops  cregister  csuspend  cunsuspend  delban  deluser  deop  devoice  index  index-admin  invite  join  listbans  listusers  modauto  moduser  op  part  register  set  suspend  u-cdrop  u-chansuspend  u-chanunsuspend  u-cregister  u-csuspend  u-cunsuspend  unban  unsuspend  voice
help/global/: addwelcome  index  index-admin  u-addwelcome
help/hoststat/: clones  host  testmask
help/jupeserv/: index  index-admin  jupe  unjupe
help/main/: u-die  u-flags  u-rehash  u-who
help/nickserv/: index  regain  release
help/operbot/: index  index-admin  invite  ojoin  op  opart  u-ojoin  u-opart
help/opers/: cmode  credits  dline  etrace  index  invite  join  knock  links  list  operspy  privmsg  rehash  resv  set  stats  testmask  time  topic  who  (+4 more)
iauth/: Makefile.in
include/: .cvsignore  Makefile.in  balloc.h  banconf.h  blalloc.h  c_init.h  cache.h  channel.h  channel_mode.h  class.h  client.h  cluster.h  commio.h  common.h  conf.h  config.h  config.h.dist  confmatch.h  db.h  dbhook.h  dbuf.h  debug.h  defaults.h  defs.h  dline_conf.h  email.h  event.h  fdlist.h  fileio.h  flud.h  getopt.h  handlers.h  hash.h  help.h  hook.h  hostmask.h  io.h  iplines.h  irc_string.h  ircd.h  (+76 more)
langs/: Makefile.in  bg.lang  example.lang  example.lang.x  genexample.pl  ru.lang
libircd/: Makefile.am  Makefile.in  balloc.c  commio.c  commio.h  devpoll.c  epoll.c  event.c  event.h  ircd_lib.c  ircd_lib.h  ircd_memory.c  ircd_memory.h  kqueue.c  linebuf.c  linebuf.h  poll.c  ports.c  select.c  sigio.c  snprintf.c  snprintf.h  tools.c  tools.h
libltdl/: .cvsignore
libratboxdb/: rsdb_common.c  rsdb_mysql.c  rsdbs_common.c
messages/: Makefile.in  ayb.po  build_one  custom.mo  custom.po
modules/: .cvsignore  .depend  Makefile  Makefile.am  Makefile.in  descrip.mms  instdso.sh  m_accept.c  m_admin.c  m_away.c  m_cap.c  m_capab.c  m_cburst.c  m_challenge.c  m_cjoin.c  m_clearchan.c  m_client.c  m_close.c  m_cmessage.c  m_connect.c  m_cryptlink.c  m_dline.c  m_dmem.c  m_drop.c  m_encap.c  m_eob.c  m_error.c  m_etrace.c  m_gline.c  m_hash.c  m_help.c  m_htm.c  m_info.c  m_invite.c  m_ison.c  m_join.c  m_kline.c  m_knock.c  m_links.c  m_list.c  (+48 more)
modules/core/: .cvsignore  Makefile.in  channels.c  descrip.mms  m_die.c  m_error.c  m_join.c  m_kick.c  m_kill.c  m_message.c  m_mode.c  m_nick.c  m_part.c  m_quit.c  m_server.c  m_sjoin.c  m_squit.c  users.c
pcre/: Makefile.in  configure
servlink/: .cvsignore  .depend  Makefile.am  Makefile.in  README  TODO  control.c  control.h  descrip.mms  io.c  io.h  servlink.c  servlink.h  setup.h.in
sqlite/: Makefile.in  README  README_RATBOX  configure  configure.ac  main.mk  sqlite.pc.in
sqlite3/: Makefile.in  configure  configure.ac  main.mk
src/: .cvsignore  .depend  .indent.pro  Makefile  Makefile.am  Makefile.in  adns.c  b_sprintf.c  balloc.c  banconf.c  blalloc.c  c_error.c  c_message.c  c_mode.c  cache.c  channel.c  channel_mode.c  cidr.c  class.c  client.c  cluster.c  commio.c  conf.c  confmatch.c  crypt.c  db-pgsql.c  db-sqlite.c  dbhook.c  dbuf.c  debug.c  descrip.mms  devpoll.c  dline_conf.c  dns.c  dynlink.c  email.c  epoll.c  event.c  fdlist.c  fileio.c  (+178 more)
src/ident/: Makefile.am  Makefile.in  commio.c  commio.h  defs.h  ident.c  mem.c  mem.h  tools.c  tools.h
src/resolver/: Makefile.am  Makefile.in  resolver.c
tools/: .cvsignore  Makefile.am  Makefile.in  README  README.mkpasswd  convertconf.c  convertilines.c  convertklines.c  dbupgrade.pl  definetolength.pl  descrip.mms  encspeed.c  fixklines.c  generate-schema.pl  install_ircd  ircd-shortcut.pl  ircd.conf  ircd.conf.new  ircd_start.c  klineParse.c  md5mkpasswd.c  mkpasswd.c  mkpasswd_vms.c  sqlitecheck.pl  viconf.c
(+128 files in other folders)
